Updated site to fix hugo warnings and pagination

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="/css/fa.css" >
 
         <title>{{ .Title }} - {{ .Site.Title }}</title>
-        {{ .Hugo.Generator }}
+        {{ hugo.Generator }}
     </head>
     <body>
         <div id = "page-container">
